# solar-system-visualizer

./: LICENSE  README.md  Requirements.txt  pyproject.toml
src/solar_system_visualizer/: __init__.py  colors.py  config.py  entities.py  hud.py  main.py  physics.py  render.py
tests/: test_physics.py
